Bug 1933391 [translations] Refactor the code to add lazy getters for accessing elements in the document with names. Move the language list HTML elements into html file and toggle its visibility using the hidden attribute. r=nordzilla,settings-reviewers,desktop-theme-reviewers,translations-reviewers,mossop,dao
Differential Revision: https://phabricator.services.mozilla.com/D225956

--- a/browser/themes/shared/preferences/translations.css
+++ b/browser/themes/shared/preferences/translations.css
@@ -31,10 +31,16 @@
 }
 
 .translations-settings-languages-card {
-  display: flex;
   flex-direction: column;
-  max-height: calc( 7 * var(--space-xlarge));
+  max-height: calc( 14 * var(--space-xlarge));
   padding-inline: calc( 2 * var(--space-small));
+
+  &[hidden] {
+    display: none;
+  }
+  &:not([hidden]) {
+    display: flex;
+  }
 }
 
 .translations-settings-language-header {
